#4433: removed unnecessary /operations /transactions endpoints
