# exp/lighthorizon/actions/static/api_docs.yml
@@ -109,106 +109,6 @@ paths:
       summary: Get Transactions by Account ID and Paged list
       description: Get Transactions by Account ID and Paged list
       tags: [] 
-  /transactions:
-    get:
-      responses:
-        '200':
-          description: OK
-          headers: {}
-          content:
-            application/json:
-              schema: 
-                $ref: '#/components/schemas/CollectionModel_Tx'
-              example:
-                _links:
-                  self:
-                    href: http://localhost:8080/transactions?cursor=&limit=0&order=
-                  next:
-                    href: http://localhost:8080/transactions?cursor=6606621773930497&limit=0&order=
-                  prev:
-                    href: http://localhost:8080/transactions?cursor=6606621773930497&limit=0&order=asc
-                _embedded:
-                  records:
-                  - memo: xdr.MemoText("psp:1405")
-                    _links:
-                      self:
-                        href: http://localhost:8080/transactions/5fef21d5ef75ecf18d65a160cfab17dca8dbf6dbc4e2fd66a510719ad8dddb09
-                    id: 5fef21d5ef75ecf18d65a160cfab17dca8dbf6dbc4e2fd66a510719ad8dddb09
-                    paging_token: '6606621773930497'
-                    successful: false
-                    hash: 5fef21d5ef75ecf18d65a160cfab17dca8dbf6dbc4e2fd66a510719ad8dddb09
-                    ledger: 1538224
-                    created_at: '2022-06-17T23:29:42Z'
-                    source_account: GCFJN22UG6IZHXKDVAJWAVEQ3NERGCRCURR2FHARNRBNLYFEQZGML4PW
-                    source_account_sequence: ''
-                    fee_account: ''
-                    fee_charged: '3000'
-                    max_fee: '0'
-                    operation_count: 1
-                    envelope_xdr: AAAAAgAAAACKlutUN5GT3UOoE2BUkNtJEwoipGOinBFsQtXgpIZMxQAAJxAAE05oAAHUKAAAAAEAAAAAAAAAAAAAAABirQ6AAAAAAQAAAAhwc3A6MTQwNQAAAAEAAAAAAAAAAQAAAADpPdN37FA9KVcJfmMBuD8pPcaT5jqlrMeYEOTP36Zo2AAAAAJBVE1ZUgAAAAAAAAAAAAAAZ8rWY3iaDnWNtfpvLpNaCEbKdDjrd2gQODOuKpmj1vMAAAAAGHAagAAAAAAAAAABpIZMxQAAAEDNJwYToiBR6bzElRL4ORJdXXZYO9cE3-ishQLC_fWGrPGhWrW7_UkPJWvxWdQDJBjVOHuA1Jjc94NSe91hSwEL
-                    result_xdr: AAAAAAAAC7j_____AAAAAQAAAAAAAAAB____-gAAAAA=
-                    result_meta_xdr: ''
-                    fee_meta_xdr: ''
-                    memo_type: MemoTypeMemoText
-                    signatures:
-                    - pIZMxQAAAEDNJwYToiBR6bzElRL4ORJdXXZYO9cE3-ishQLC_fWGrPGhWrW7_UkPJWvxWdQDJBjVOHuA1Jjc94NSe91hSwEL
-      summary: Get Transactions by paged list
-      operationId: GetTransactions
-      description: Retrieve transactions by paged listing.
-      tags: []
-      parameters: 
-        - $ref: '#/components/parameters/CursorParam'
-        - $ref: '#/components/parameters/LimitParam'
-  /operations:
-    get:
-      responses:
-        '200':
-          description: OK
-          headers: {}
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CollectionModel_Operation'
-              example:
-                _links:
-                  self:
-                    href: http://localhost:8080/operations?cursor=6606617478959105&limit=1&order=asc
-                  next:
-                    href: http://localhost:8080/operations?cursor=6606621773926401&limit=1&order=asc
-                  prev:
-                    href: http://localhost:8080/operations?cursor=6606621773926401&limit=1&order=desc
-                _embedded:
-                  records:
-                  - _links:
-                      self:
-                        href: http://localhost:8080/operations/6606621773926401
-                    id: '6606621773926401'
-                    paging_token: '6606621773926401'
-                    transaction_successful: true
-                    source_account: GBGTCH47BOEEKLPHHMR2GOK6KQFGL3O7Q53FIZTJ7S7YEDWYJ5IUDJDJ
-                    type: manage_sell_offer
-                    type_i: 3
-                    created_at: '2022-06-17T23:29:42Z'
-                    transaction_hash: 544469b76cd90978345a4734a0ce69a9d0ddb4a6595a7afc503225a77826722a
-                    amount: '0.0000000'
-                    price: '0.0000001'
-                    price_r:
-                      n: 1
-                      d: 10000000
-                    buying_asset_type: credit_alphanum4
-                    buying_asset_code: USDV
-                    buying_asset_issuer: GAXXMQMTDUQ4YEPXJMKFBGN3GETPJNEXEUHFCQJKGJDVI3XQCNBU3OZI
-                    selling_asset_type: credit_alphanum4
-                    selling_asset_code: EURV
-                    selling_asset_issuer: GAXXMQMTDUQ4YEPXJMKFBGN3GETPJNEXEUHFCQJKGJDVI3XQCNBU3OZI
-                    offer_id: '425531'
-      summary: Get Operations by paged list
-      operationId: GetOperations
-      description: Retrieve operations by paged listing.
-      tags: []
-      parameters: 
-        - $ref: '#/components/parameters/CursorParam'
-        - $ref: '#/components/parameters/LimitParam' 
 components:
   parameters:
     CursorParam:
